Check others items if the 1st picked doesn't match